force-app/main/default/objects/Loan_Application_Validity__mdt/Loan_Application_Validity__mdt.object-meta.xml
<CustomObject>
    <label>Loan Application Validity</label>
    <pluralLabel>Loan Applications Validity</pluralLabel>
</CustomObject>