force-app/main/default/objects/Loan_Application_Validity__mdt/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Months to be added in calculating the final value of the field, Valid Upto, in the object, Residential Loan Application</description>
    <label>Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>