force-app/main/default/objects/Loan_Application_Validity__mdt/fields/Years__c.field-meta.xml
<CustomField>
    <fullName>Years__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Years to be added in calculating the final value of the field, Valid Upto, in the object, Residential Loan Application</description>
    <label>Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>